@startuml

title US007

/'
As a Power User [or Administrator], I want to add a sensor to an existing device in
a room. The sensor must be of a model of an existing type of sensor.
'/

class Catalogue{
    - sensorClassList : List<String>
    + getSensorsCatalogue : sensorsModels
}

class House {
  - rooms : List<Room>
  + getRoomByName(...) : Room
}
class GetRoomListController {
    - house : House
    - roomMapper : RoomMapper
    + GetRoomListController(...)
    + getRooms(...) : List<RoomDTO>
}

class GetDeviceListController {
    - house : House
    - deviceMapper : DeviceMapper
    + GetDeviceListController(...)
    + getDevices(...) : List<DeviceDTO>
}

class AddSensorToDeviceController {
    - house : House
    - deviceMapper : DeviceMapper
    + AddSensorToDeviceController(...)
    + addSensorToDevice(...) : sensorDTO
}

class Room {
- name : String
- devices : List<Device>
+ getDeviceByName(...) : Device
}

interface SensorFactory {
- catalogue : Catalogue
+ createSensor(...) : Sensor
}

class SensorFactoryImp {
- catalogue : Catalogue
+ createSensor(...) : Sensor
}

class Device {
- name : String
- active : boolean
- sensors : List<Sensor>
- functionalities : HashSet<String>
+ addSensor(...) : Sensor
}

interface Sensor {
+createSensor(...) : Sensor
}

class SensorMapper {
+getSensorDTO(...) : SensorDTO
}

class SensorDTO {
- sensorId : int
- sensorType : SensorType
+createSensorDTO(...) : SensorDTO
}

note left of GetRoomListController : ref: GetRoomListController\nfor more details
note bottom of GetDeviceListController : ref: GetDeviceController\nfor more details


AddSensorToDeviceController "1" .left.> "1" GetRoomListController : uses
AddSensorToDeviceController "1" .left.> "1" GetDeviceListController : uses
AddSensorToDeviceController "1" ..> "1" Catalogue : uses
AddSensorToDeviceController "1" ..> "1" House : uses
House "1" *-- "*" Room : contains
Room "1" *-- "*" Device : contains
AddSensorToDeviceController "1" .right.> "1" SensorMapper : uses
AddSensorToDeviceController "1" ..> "1" Room : uses
AddSensorToDeviceController "1" ..> "1" Device : uses
Device "1" .right.> "1" SensorFactory : uses
SensorFactoryImp "1" ..> "1" Sensor : creates
SensorMapper "1" ..> "1" SensorDTO : creates
SensorFactoryImp ..|> SensorFactory : implements
Device "1" *-- "*" Sensor : contains
@enduml